# sudoku_recognizer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sonar-project.properties
exp/: sauvola.cpp
include/: algo.hpp  config.hpp  data.hpp  dataset.hpp  detector.hpp  fill.hpp  image_utils.hpp  solver.hpp  stop_watch.hpp  sudoku.hpp  trig_utils.hpp  utils.hpp
src/: binarization.cpp  binarize.cpp  config.cpp  data.cpp  dataset.cpp  detector.cpp  fill.cpp  image_utils.cpp  sauvola.cpp  solver.cpp  sudoku.cpp
